Changed --add-modules parameter in xjc/schemagen bat launchers